--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body {
 .container {
     background-color: white;
     padding: 30px;
+    height: 100%;
+    overflow-y: auto;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     width: 34%;
