--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #898484;
+    background-color: #6d6d6d;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,14 +17,16 @@ body {
 
 .container {
     background-color: white;
-    padding: 30px;
+    padding: 40px;
     overflow-y: auto;
     border-radius: 8px;
+    align-items: center;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     width: 36%;
     max-height: 500px;
     text-align: center;
 }
+
 
 .logo-container {
     margin-bottom: 20px;
@@ -46,7 +48,7 @@ input {
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 10px;
-    border: 1,7px ridge #040404;
+    border: 1,7px solid #040404;
 }
 
 button.remover{
@@ -56,7 +58,7 @@ button.add-task-button {
     width: 50%;
     padding: 13px;
     margin: 10px;
-    background-color: #009311;
+    background-color: #04810a;
     color: white;
     border: none;
     border-radius: 8px;
@@ -83,6 +85,7 @@ ul {
 li {
     
     font-size: 15pt;
+    padding: 10px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     transition: background-color 0.3s ease;
     border-radius: 20px;
@@ -92,8 +95,9 @@ li {
 
 button.complete, button.remove {
     width: 20%;
-    padding: 15px;
+    padding: 12px;
     margin: 2px;
+    height: 7%;
     background-color: #058a20;
     color: white;
     border: none;
@@ -128,6 +132,7 @@ button.remove:focus, button.complete:focus {
 li.completed {
     font-size: 15pt;
     margin: 10px;
+    padding: 10px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #000000;
     width: auto;
@@ -136,14 +141,33 @@ li.completed {
     border-radius: 20px;
      
 }
+button.edit {
+    width: 20%;
+    align-items: center;
+    padding: 12px;
+    margin: 2px;
+    height: 7%;
+    background-color: #0c20a8;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
 
-Z
+button.edit:hover {
+    background-color: #0056b3;
+}
 
 .completed {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: rgb(11, 10, 10);
 }
 
+li button {
+    display: inline-block; 
+}
 @media (max-width: 600px) {
     .container {
         width: 90%;
@@ -153,7 +177,7 @@ Z
         padding: 8px;
     }
 
-    button.complete, button.remove {
+    button.complete, button.remove, button.edit {
         width: 18%;
     }
 }
