--- a/style.css
+++ b/style.css
@@ -51,9 +51,6 @@ input {
     border: 1,7px solid #040404;
 }
 
-button.remover{
-    background-color: red;
-}
 button.add-task-button {
     width: 50%;
     padding: 13px;
@@ -68,11 +65,7 @@ button.add-task-button {
     transition: background-color 0.3s ease;
 }
 
-button.task.completed {
-    color: rgb(0, 0, 0);
-}
-
-button:hover {
+button.add-task-button:hover {
     background-color: #288a34;
 }
 
@@ -83,14 +76,12 @@ ul {
 }
 
 li {
-    
+    width: 100%;
     font-size: 15pt;
-    padding: 10px;
+    padding: 15px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     transition: background-color 0.3s ease;
     border-radius: 20px;
-    margin: 10px;
-   
 }
 
 button.complete, button.remove {
@@ -130,17 +121,17 @@ button.remove:focus, button.complete:focus {
 }
 
 li.completed {
+    width: 100%;
     font-size: 15pt;
-    margin: 10px;
-    padding: 10px;
+    padding: 15px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #000000;
     width: auto;
     background-color: #73cf767d; 
     transition: background-color 0.3s ease;
     border-radius: 20px;
-     
 }
+
 button.edit {
     width: 20%;
     align-items: center;
@@ -160,14 +151,45 @@ button.edit:hover {
     background-color: #0056b3;
 }
 
-.completed {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: rgb(11, 10, 10);
+/* CSS para o campo de edição */
+input.edit-input {
+    width: 80%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    border: 1,7px solid #040404;
+    font-size: 15pt;
+    margin-right: 10px;
+    display: inline-block;
 }
 
-li button {
-    display: inline-block; 
+button.save {
+    width: 20%;
+    padding: 12px;
+    background-color: #0923a5;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+    margin-top: 10px;
 }
+
+button.save:hover {
+    background-color: #0a1770;
+}
+
+button.save:focus {
+    outline: none;
+}
+
+
+li button {
+    display: inline-block;
+}
+
+/* Responsividade para dispositivos móveis */
 @media (max-width: 600px) {
     .container {
         width: 90%;
@@ -179,5 +201,17 @@ li button {
 
     button.complete, button.remove, button.edit {
         width: 30%;
+    }
+
+    li.completed {
+        width: 100%;
+        font-size: 15pt;
+        padding: 15px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        color: #000000;
+        width: auto;
+        background-color: #73cf767d; 
+        transition: background-color 0.3s ease;
+        border-radius: 20px;
     }
 }
