--- a/style.css
+++ b/style.css
@@ -11,12 +11,45 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    transition: background-color 0.3s ease, color 0.3s ease;
     width: 100%;
     margin: 0;
 }
 
+body.dark-theme {
+    background-color: #333333; 
+    color: #f4f4f4;
+}
+
 .container {
-    background-color: white;
+    transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.container.dark-theme {
+    background-color: #1a1919; 
+    color: #f4f4f4; 
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7); 
+}
+
+button.dark-theme {
+    background-color: #444444; 
+    color: #f4f4f4; 
+}
+input.dark-theme{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    border: 1,7px solid #040404;
+    background-color: #000000;
+}
+
+
+li.dark-theme{
+    background-color: #000000;
+}
+.container {
+    background-color: rgb(233, 229, 229);
     padding: 40px;
     overflow-y: auto;
     border-radius: 8px;
@@ -66,9 +99,8 @@ button.add-task-button {
 }
 
 button.add-task-button:hover {
-    background-color: #6fa0d1;
+    background-color: #83bcf5;
 }
-
 
 ul {
     list-style-type: none;
@@ -332,4 +364,27 @@ li button {
         transition: background-color 0.3s ease;
         margin-top: 10px;
     }
+
+}
+
+button.theme-toggle {
+    width: 40%;
+    padding: 13px;
+    margin: 10px;
+    background-color: #2e77bf;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-bottom: 20px;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+button.theme-toggle:hover {
+    background-color: #1e6797;
+}
+
+button.theme-toggle:focus {
+    outline: none;
 }
