--- a/style.css
+++ b/style.css
@@ -367,11 +367,12 @@ li button {
 
 }
 
+
 button.theme-toggle {
-    width: 30%;
+    width: 50%;
     padding: 13px;
     margin: 10px;
-    background-color: #cc0404dd;
+    background-color: #ac1616;
     color: white;
     border: none;
     border-radius: 8px;
@@ -382,7 +383,7 @@ button.theme-toggle {
 }
 
 button.theme-toggle:hover {
-    background-color: #871515;
+    background-color: #5d1111;
 }
 
 button.theme-toggle:focus {
