--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -148,10 +149,10 @@ li.completed:last-child {
 
 textarea.edit-input {
     width: 100%; 
-    height: 80px;          
+    height: 70px;          
     padding: 10px;         
     border-radius: 5px;      
-    border: 1px solid #ccc;
+    border: 3px solid #024ec1;
     font-size: 16px; 
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
     resize: vertical;        
@@ -173,7 +174,7 @@ textarea.edit-input:focus {
 
 
 button.complete, button.remove {
-    width: 20%;
+    width: 16%;
     padding: 12px;
     margin: 2px;
     height: 7%;
@@ -210,7 +211,7 @@ button.remove:focus, button.complete:focus {
 
 
 button.edit {
-    width: 20%;
+    width: 16%;
     align-items: center;
     padding: 12px;
     margin: 2px;
